// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`indent.js 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`
Mixed tabs and spaces:
\${() => {a}}
 	\${() => {a}}
  	\${() => {a}}
   	\${() => {a}}
    	\${() => {a}}
     	\${() => {a}}
      	\${() => {a}}
       	\${() => {a}}
        	\${() => {a}}

Tabs:
	\${() => {a}}
		\${() => {a}}
\`

=====================================output=====================================
\`
Mixed tabs and spaces:
\${() => {
  a;
}}
 	\${() => {
    a;
  }}
  	\${() => {
      a;
    }}
   	\${() => {
      a;
    }}
    	\${() => {
        a;
      }}
     	\${() => {
        a;
      }}
      	\${() => {
          a;
        }}
       	\${() => {
          a;
        }}
        	\${() => {
            a;
          }}

Tabs:
	\${() => {
    a;
  }}
		\${() => {
      a;
    }}
\`;

================================================================================
`;

exports[`indent.js 2`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
tabWidth: 8
useTabs: true
                                                                                | printWidth
=====================================input======================================
\`
Mixed tabs and spaces:
\${() => {a}}
 	\${() => {a}}
  	\${() => {a}}
   	\${() => {a}}
    	\${() => {a}}
     	\${() => {a}}
      	\${() => {a}}
       	\${() => {a}}
        	\${() => {a}}

Tabs:
	\${() => {a}}
		\${() => {a}}
\`

=====================================output=====================================
\`
Mixed tabs and spaces:
\${() => {
	a;
}}
 	\${() => {
		a;
	}}
  	\${() => {
		a;
	}}
   	\${() => {
		a;
	}}
    	\${() => {
		a;
	}}
     	\${() => {
		a;
	}}
      	\${() => {
		a;
	}}
       	\${() => {
		a;
	}}
        	\${() => {
			a;
		}}

Tabs:
	\${() => {
		a;
	}}
		\${() => {
			a;
		}}
\`;

================================================================================
`;
